--- a/newGameProject/Properties/Resources.resx
+++ b/newGameProject/Properties/Resources.resx
@@ -187,4 +187,7 @@
   <data name="WelcomeScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\WelcomeScreen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="specialBullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\37041dfd-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
